# fastpeek

./: Cargo.toml  README.md
src/: adapter.rs  blanket.rs  blanket_impl.rs  lib.rs  std_impl.rs
src/adapter/: cloning.rs  func.rs  mod.rs  prefetch.rs
