[package]
name = "fastpeek"
version = "0.2.1"
edition = "2021"
authors = ["Christian Schjølberg <grelner@pm.me>"]
repository = "https://github.com/grelner/fastpeek"
description = "A different way to peek"

readme = "README.md"
keywords = ["iterator", "peek"]
categories = []

license = "MIT OR Apache-2.0"

[dependencies]
